--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/metamask.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="Technical test — Blockchain Wallet Demo: connect MetaMask, detect network, UI feedback, React + TS"
+    />
+    <title>Blockchain Wallet Demo</title>
   </head>
   <body>
     <div id="root"></div>
